# traverse_take_home

environments/infra_harbor/: README.md  infra_harbor.py  pyproject.toml
environments/infra_harbor/environment/: Dockerfile
environments/infra_harbor/environment/infra/: .env.example  Dockerfile.web  Dockerfile.worker  docker-compose.yml
environments/infra_harbor/environment/infra/app/: main.py  requirements.txt  worker.py
environments/infra_harbor/environment/infra/nginx/: nginx.conf
environments/infra_harbor/environment/infra/nginx/conf.d/: default.conf
environments/infra_harbor/environment/infra/scripts/: entrypoint.sh  healthcheck.sh
environments/infra_harbor/tasks/_template/: instruction.md  task.toml
environments/infra_harbor/tasks/_template/solution/: solve.sh
environments/infra_harbor/tasks/_template/tests/: test.sh  test_solution.py
environments/infra_harbor/tasks/add-ci-pipeline/: instruction.md  task.toml
environments/infra_harbor/tasks/add-ci-pipeline/solution/: solve.sh
environments/infra_harbor/tasks/add-ci-pipeline/tests/: test.sh  test_solution.py
environments/infra_harbor/tasks/fix-docker-compose/: instruction.md  task.toml
environments/infra_harbor/tasks/fix-docker-compose/solution/: solve.sh
environments/infra_harbor/tasks/fix-docker-compose/tests/: test_solution.py
environments/infra_harbor/tasks/fix-nginx-config/: instruction.md  task.toml
environments/infra_harbor/tasks/fix-nginx-config/solution/: solve.sh
environments/infra_harbor/tasks/fix-nginx-config/tests/: test_solution.py
environments/swe_harbor/: GUIDE.md
(+12 files in other folders)
