[project]
name = "infra-harbor"
description = "DevOps infrastructure configuration environment: Docker Compose, nginx, and CI/CD pipeline tasks"
license = "MIT"
tags = ["eval", "cli_agent", "devops", "infrastructure"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10.dev4",
    "prime-sandboxes>=0.2.10",
    "tomli>=2.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["infra_harbor.py", "pyproject.toml", "tasks/**/*"]

[tool.verifiers.eval]
num_examples = 3
rollouts_per_example = 3

[tool.ruff]
exclude = ["tasks/**"]
